--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/component_snippets.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/component_snippets.sdf.jinja
@@ -2601,7 +2601,7 @@ limitations under the License.
 
 {# TODO: UWB plugin is not core #}
 {# uwb_range_macro {--> #}
-{%- macro uwb_range_macro(parent_link, x, y, z, roll, pitch, yaw, spawner_args) -%}
+{%- macro uwb_range_macro(parent_link, x, y, z, roll, pitch, yaw, mount, spawner_args) -%}
 
   {%- set spawner_keyword = 'enable-uwb-range' -%}
   {%- set spawner_description = 'Add Qorvo DW1000 UWB transceiver. Requires param "signal_id" to be set.' -%}
@@ -2642,6 +2642,11 @@ limitations under the License.
         <disableFixedJointLumping>true</disableFixedJointLumping>
         <preserveFixedJoint>true</preserveFixedJoint>
       </joint>
+
+      <!-- mount {-->
+      {{ mount }}
+      <!--}-->
+
       <!--}-->
 
     {%- endif -%}
