--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/component_snippets.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/component_snippets.sdf.jinja
@@ -126,77 +126,6 @@ limitations under the License.
 <!--}-->
 
 
-{# TODO: make a component out of this #}
-<!-- Macro to add a thermal camera {-->
-{%- macro thermal_camera_macro(camera_name, camera_topic_name, parent_frame_name, camera_frame_name, sensor_base_frame_name, parent_link, frame_rate, hfov, image_width, image_height, x, y, z, roll, pitch, yaw) -%}
-<link name="{{ camera_name }}_link">
-  <pose>{{ x }} {{ y }} {{ z }} {{ roll }} {{ pitch }} {{ yaw }}</pose>
-  {{ generic.zero_inertial_macro() }}
-  <visual name="visual">
-    <pose>0 0 0 0 0 0</pose>
-    <geometry>
-      <mesh>
-        <uri>mrs_robots_description/meshes/sensors/teraranger_evo_thermal_33.dae</uri>
-        <scale>0.001 0.001 0.001</scale>
-      </mesh>
-    </geometry>
-    <material>
-      <script>
-        <name>Gazebo/Yellow</name>
-        <uri>file://media/materials/scripts/gazebo.material</uri>
-      </script>
-    </material>
-  </visual>
-  <sensor name="mrs_thermal_camera_sensor" type="camera">
-    <update_rate>{{ frame_rate }}</update_rate>
-    <camera>
-      <horizontal_fov>{{ hfov }}</horizontal_fov>
-      <image>
-        <format>R8G8B8</format>
-        <width>{{ 3 * image_width }}</width>
-        <height>{{ 3 * image_height }}</height>
-      </image>
-      <clip>
-        <near>0.1</near>
-        <far>300</far>
-      </clip>
-      <noise>
-        <type>gaussian</type>
-        <mean>0.0</mean>
-        <stddev>0.0</stddev>
-      </noise>
-    </camera>
-    <plugin name="{{camera_name}}_plugin" filename="libMRSGazeboThermalCameraPlugin.so">
-      <alwaysOn>true</alwaysOn>
-      <cameraName>{{ camera_name }}</cameraName>
-      <updateRate>{{ frame_rate }}</updateRate>
-      <imageTopicName>{{ camera_topic_name }}/rgb_image</imageTopicName>
-      <cameraInfoTopicName>{{ camera_topic_name }}/camera_info</cameraInfoTopicName>
-      <rawTemperatureTopicName>{{ camera_topic_name }}/raw_temp_array</rawTemperatureTopicName>
-      <surroundingTemperature>20</surroundingTemperature>
-      <maximalTemperature>150</maximalTemperature>
-      <minimalTemperatureGreenColor>0.2</minimalTemperatureGreenColor>
-      <noiseStdDev>4.0</noiseStdDev>
-      <noiseStdDevMaxTemp>20.0</noiseStdDevMaxTemp>
-      <frameName>{{ camera_frame_name }}</frameName>
-      <parentFrameName>{{ parent_frame_name }}</parentFrameName>
-      <sensorBaseFrameName>{{ sensor_base_frame_name }}</sensorBaseFrameName>
-      <x>{{ x }}</x>
-      <y>{{ y }}</y>
-      <z>{{ z }}</z>
-      <roll>{{ roll }}</roll>
-      <pitch>{{ pitch }}</pitch>
-      <yaw>{{ yaw }}</yaw>
-    </plugin>
-  </sensor>
-</link>
-
-<joint name="{{ camera_name }}_joint" type="fixed">
-  <parent>{{ parent_link }}</parent>
-  <child>{{ camera_name }}_link</child>
-</joint>
-{%- endmacro -%}
-<!--}-->
 
 <!-- ========================== other sensors ========================= -->
 
@@ -1207,7 +1136,7 @@ limitations under the License.
       <!-- visuals {-->
       {{ generic.visual_mesh_macro(
         name = 'base_visual',
-        mesh_file = '://mrs_robots_description/meshes/sensors/os1_64.dae',
+        mesh_file = 'model://mrs_robots_description/meshes/sensors/os1_64.dae',
         mesh_scale = '1 1 1',
         color = 'White',
         x = 0,
@@ -2062,7 +1991,7 @@ limitations under the License.
 {%- macro servo_camera_macro(parent, offset_pitch_link_x, offset_pitch_link_y, offset_pitch_link_z, offset_pitch_link_yaw, offset_pitch_link_roll, offset_pitch_link_pitch, offset_roll_link_x, offset_roll_link_y, offset_roll_link_z, offset_roll_link_yaw, offset_roll_link_roll, offset_roll_link_pitch, tilt_update_rate, max_pitch, min_pitch, max_pitch_rate, max_roll, min_roll, max_roll_rate, compensate_tilt_roll, compensate_tilt_pitch, parent_frame_name, sensor_base_frame_name, camera_frame_name, camera_update_rate, horizontal_fov, img_width, img_height, roll_link_mesh_file, pitch_link_mesh_file, mesh_scale, spawner_args) -%}
 
   {%- set spawner_keyword = 'enable-servo-camera' -%}
-  {%- set spawner_description = 'Add camera on virtual servo to the vehicle' -%}
+  {%- set spawner_description = 'Add a camera on virtual servo to the vehicle' -%}
   {%- set spawner_default_args = none -%}
 
   {%- if spawner_keyword in spawner_args.keys() -%}
@@ -2232,13 +2161,59 @@ limitations under the License.
 {%- endmacro -%}
 {# <!--}--> #}
 
+{# thermal_cameras_macro {--> #}
+{%- macro thermal_cameras_macro(cameras_list, parent_link, mount, spawner_args) -%}
+
+  {%- set spawner_keyword = 'enable-thermal-cameras' -%}
+  {%- set spawner_description = 'Add several thermal cameras to the vehicle' -%}
+  {%- set spawner_default_args = {'image_width': 32, 'image_height': 32, 'update_rate': 14} -%}
+
+  {%- if spawner_keyword in spawner_args.keys() -%}
+    {{ generic.handle_spawner_args(spawner_keyword, spawner_default_args, spawner_args) }}
+
+    {%- if cameras_list | length > 0 -%}
+      <!-- Thermal cameras {-->
+      {%- for camera in cameras_list -%}
+        <!-- Thermal camera {{ camera['name'] }} {-->
+        {{ thermal_camera_macro(
+          camera_name = camera['name'],
+          camera_topic_name = '/' + spawner_args['name'] + '/thermal/' + camera['name'],
+          parent_frame_name = spawner_args['name'] + '/fcu',
+          camera_frame_name = 'thermal/' + camera['name'] + '_optical',
+          sensor_base_frame_name = spawner_args['name'] + '/thermal/' + camera['name'],
+          parent_link = parent_link,
+          frame_rate = spawner_args[spawner_keyword]['update_rate'],
+          hfov = 0.575959,
+          image_width = spawner_args[spawner_keyword]['image_width'] | int,
+          image_height = spawner_args[spawner_keyword]['image_height'] | int,
+          x = camera['x'],
+          y = camera['y'],
+          z = camera['z'],
+          roll = camera['roll'],
+          pitch = camera['pitch'],
+          yaw = camera['yaw'])
+        }}
+        <!--}-->
+      {%- endfor -%}
+
+      <!-- mount {-->
+      {{ mount }}
+      <!--}-->
+
+      <!--}-->
+    {%- endif -%}
+
+  {%- endif -%}
+{%- endmacro -%}
+<!--}-->
+
 {# ========================= UVDAR components ======================= #}
 
 {# dual_uv_cameras_macro {--> #}
 {%- macro dual_uv_cameras_macro(parent_link, x1, y1, z1, roll1, pitch1, yaw1, x2, y2, z2, roll2, pitch2, yaw2, mount, spawner_args) -%}
 
   {%- set spawner_keyword = 'enable-dual-uv-cameras' -%}
-  {%- set spawner_description = 'Add right and left UV cameras on the vehicle. Requires param "calib_file" to be set' -%}
+  {%- set spawner_description = 'Add right and left UV cameras to the vehicle. Requires param "calib_file" to be set' -%}
   {%- set spawner_default_args = {'occlusions': False, 'calib_file': none, 'update_rate': 60} -%}
 
   {%- if spawner_keyword in spawner_args.keys() -%}
@@ -2291,7 +2266,7 @@ limitations under the License.
 {%- macro back_uv_camera_macro(parent_link, x, y, z, roll, pitch, yaw, mount, spawner_args) -%}
 
   {%- set spawner_keyword = 'enable-back-uv-camera' -%}
-  {%- set spawner_description = 'Add a back UV camera on the vehicle. Requires param "calib_file" to be set' -%}
+  {%- set spawner_description = 'Add a back UV camera to the vehicle. Requires param "calib_file" to be set' -%}
   {%- set spawner_default_args = {'occlusions': False, 'calib_file': none, 'update_rate': 60} -%}
 
   {%- if spawner_keyword in spawner_args.keys() -%}
@@ -2301,6 +2276,42 @@ limitations under the License.
     {{ generic.uvcam_macro(
       parent_link = parent_link,
       camera_publish_topic = '/' + spawner_args['name'] + '/uvdar_bluefox_back/image_raw',
+      calibration_file = spawner_args[spawner_keyword]['calib_file'],
+      occlusions = spawner_args[spawner_keyword]['occlusions'],
+      frame_rate = spawner_args[spawner_keyword]['update_rate'],
+      device_id = spawner_args['name'] + '_3',
+      x = x,
+      y = y,
+      z = z,
+      roll = roll,
+      pitch = pitch,
+      yaw = yaw)
+    }}
+
+    <!-- mount {-->
+    {{ mount }}
+    <!--}-->
+
+    <!--}-->
+
+  {%- endif -%}
+{%- endmacro -%}
+{# <!--}--> #}
+
+{# downward_uv_camera_macro {--> #}
+{%- macro downward_uv_camera_macro(parent_link, x, y, z, roll, pitch, yaw, mount, spawner_args) -%}
+
+  {%- set spawner_keyword = 'enable-downward-uv-camera' -%}
+  {%- set spawner_description = 'Add a UV camera to the vehicle pointed down. Requires param "calib_file" to be set' -%}
+  {%- set spawner_default_args = {'occlusions': False, 'calib_file': none, 'update_rate': 60} -%}
+
+  {%- if spawner_keyword in spawner_args.keys() -%}
+    {{ generic.handle_spawner_args(spawner_keyword, spawner_default_args, spawner_args) }}
+
+    <!-- Downward UV camera {-->
+    {{ generic.uvcam_macro(
+      parent_link = parent_link,
+      camera_publish_topic = '/' + spawner_args['name'] + '/uvdar_bluefox_bottom/image_raw',
       calibration_file = spawner_args[spawner_keyword]['calib_file'],
       occlusions = spawner_args[spawner_keyword]['occlusions'],
       frame_rate = spawner_args[spawner_keyword]['update_rate'],
